Tidy layout2 back to layout

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-{% extends "layout2.html" -%} {% block title -%} {{ config.extra.company_name }}
+{% extends "layout.html" -%} {% block title -%} {{ config.extra.company_name }}
 {% endblock title -%} {% block main -%} {{ super() }}
 
 <section class="grid hero">
