--- a/templates/page.html
+++ b/templates/page.html
@@ -1,4 +1,4 @@
-{% extends "layout2.html" %} {% block main -%} {{ super() }}
+{% extends "layout.html" %} {% block main -%} {{ super() }}
 <section class="grid">
   <a href="/">
     <img
