Link to correct screen.css post CSS grid port

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -24,7 +24,7 @@
     </title>
 
     {% include "partials/google-fonts.html" %}
-    <link rel="stylesheet" href="/screen2.css" />
+    <link rel="stylesheet" href="/screen.css" />
     <link
       rel="preload"
       as="image"
