Put some testimonials on home page

--- a/templates/index.html
+++ b/templates/index.html
@@ -109,6 +109,12 @@
   {{ load_data(path="copy/experience.md") | markdown | safe }}
 </section>
 
+<section class="grid">
+  <blockquote>
+"It's been so amazing and I feel so happy because it's not just I got the goal done, but you were all supporting me. I've been doing InkTober since at least 2016 and I've never gotten 31 drawings done before." &mdash;Denise
+  </blockquote>
+</section>
+
 <section class="grid about-our-center grid bg-img-hills" id="center">
   <div>
   <img
@@ -139,6 +145,12 @@
 
 <section class="grid bg-sage">
   {{ load_data(path="copy/what-we-dont-offer.md") | markdown | safe }}
+</section>
+
+<section class="grid">
+  <blockquote>
+"I learned a lot from everybody. A little thing here, a little thing there. I'll never forget any of you guys or any of this experience. It's so frickin' cool. My soul thanks you." &mdash;Mike S
+  </blockquote>
 </section>
 
 <section class="gallery">
