Remove unnecessary JS in nav anchors

--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -1,10 +1,11 @@
-<a href="/#intro" onclick="closeNav()">Introduction</a>
-<a href="/#hosts" onclick="closeNav()">About Us</a>
-<a href="/#center" onclick="closeNav()">Our Center</a>
-<a href="/#program" onclick="closeNav()">The Program</a>
-<a href="/photos" onclick="closeNav()">Photos</a>
-<a href="/signin" onclick="closeNav()">Sign In</a>
-<a href="/team" onclick="closeNav()">Team</a>
-<a href="/blog" onclick="closeNav()">Blog</a>
-<a href="/conduct" onclick="closeNav()">Code of Conduct</a>
-<!-- <a href="/#pricing" onclick="closeNav()">Pricing</a> -->
+<a href="/#intro">Introduction</a>
+<a href="/#hosts">About Us</a>
+<a href="/#center">Our Center</a>
+<a href="/#program">The Program</a>
+<a href="/values/">Our Values</a>
+<a href="/recipe/">The Retreat Recipe</a>
+<a href="/photos">Photos</a>
+<a href="/signin">Sign In</a>
+<a href="/team">Team</a>
+<a href="/blog">Blog</a>
+<a href="/conduct">Code of Conduct</a>
