--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -2,8 +2,11 @@
 <a href="/#hosts">About Us</a>
 <a href="/#center">Our Center</a>
 <a href="/#program">The Program</a>
+{#
 <a href="/values/">Our Values</a>
 <a href="/recipe/">The Retreat Recipe</a>
+<a href="/what-to-expect/">What to Expect</a>
+#}
 <a href="/photos">Photos</a>
 <a href="/signin">Sign In</a>
 <a href="/team">Team</a>
