Better photos on home page

--- a/templates/index.html
+++ b/templates/index.html
@@ -138,8 +138,8 @@
 <section class="grid bg-honey">
     <div>{{ load_data(path="copy/amenities.md") | markdown | safe }}</div>
     <img
-      src="/images/coffee-and-rolls.jpg"
-      alt="Fresh baked goods and coffee"
+      src="photos/retreats-2022/cinnamon-tear-and-share.jpg "
+      alt="Freshly baked cinnamon tear and share treat made with love by Stella"
     />
 </section>
 
@@ -154,12 +154,17 @@
 </section>
 
 <section class="gallery">
-  <img src="/images/gallery/boating2.jpg" alt="Pete and Stella selfie on a lake" />
+  <img src="photos/retreats-2022/inktober-certificates.jpg" alt="Guests celebrating completing the InkTober illustration challenge" />
+  <img src="azure-mountain-fire-tower.jpg" alt="Stunning view of the mountains, forest, and lakes from Azure Mountain">
+  <img src="crumb-cake.jpg" alt="Home made crumb cake fresh from the oven">
+  <img src="inktober-common-room.jpg" alt="Guests working on InkTober illustrations together">
+  <img src="denise-dining.jpg" alt="Guests conduct a social media workshop in the dining room">
+  <img src="photos/retreats-2022/pad-thai-prep.jpg" alt="Ingredients prepped for pad thai night">
+  <img src="photos/retreats-2022/programming-usie.jpg" alt="Creative Coding Retreat guests">
+  <img src="cinnamon-rolls.jpg" alt="Home made cinnamon rolls">
+  <img src="photos/retreats-2022/hike-lake-overlook.jpg" alt="Scenic view of mountains and lakes from a hiking trail">
+  <img src="megan-laugh.jpg" alt="Guest laughs while sketching on a hike">
   <img src="/images/gallery/hike-selfie.jpg" alt="hiking selfie">
-  <img src="/images/gallery/mountaintop.jpg" alt="mountaintop">
-  <img src="/images/gallery/mountain-lake.jpg" alt="mountain and lake">
-  <img src="/images/gallery/pie.jpg" alt="pie">
-  <img src="/images/gallery/river.jpg" alt="river">
 </section>
 
 <section class="grid bg-honey">{% include "mailchimp.html" %}</section>
