add a 12th photo to home page grid

--- a/templates/index.html
+++ b/templates/index.html
@@ -162,9 +162,10 @@
   <img src="photos/retreats-2022/pad-thai-prep.jpg" alt="Ingredients prepped for pad thai night">
   <img src="photos/retreats-2022/programming-usie.jpg" alt="Creative Coding Retreat guests">
   <img src="cinnamon-rolls.jpg" alt="Home made cinnamon rolls">
-  <img src="photos/retreats-2022/hike-lake-overlook.jpg" alt="Scenic view of mountains and lakes from a hiking trail">
   <img src="megan-laugh.jpg" alt="Guest laughs while sketching on a hike">
+  <img src="photos/retreats-2022/hike-lake-overlook.jpg" alt="Scenic view of mountains and lakes from a hiking trail">
   <img src="/images/gallery/hike-selfie.jpg" alt="hiking selfie">
+  <img src="hike-boulder-autumn.jpg" alt="Climbing around some boulders on an autumn hike">
 </section>
 
 <section class="grid bg-honey">{% include "mailchimp.html" %}</section>
