--- a/sass/index.scss
+++ b/sass/index.scss
@@ -22,7 +22,6 @@ section.hero {
     margin-bottom: 60px;
     background: rgba(255, 255, 255, 0.6);
     line-height: 1.1;
-    width: 100%;
     text-align: center;
     padding: 0.2em;
   }
@@ -30,6 +29,15 @@ section.hero {
 
 section.hosts img.hosts {
   @include float(right);
+}
+
+section.values {
+  a {
+    font-size: 24px;
+  }
+  li {
+    font-size: 24px;
+  }
 }
 
 section.about-our-center img {
@@ -120,7 +128,7 @@ section.bg-img-sunset {
 .programs {
   margin: 0;
   li {
-    line-height:2.5em; 
+    line-height: 2.5em;
     display: block;
   }
 }
