More work on home page layout and copy

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,10 +8,15 @@
 
 <section class="grid bg-dark-blue callout-text" id="intro">
   <h3>
-    Focus Retreat Center runs retreats for coding, illustration, writing,
-    learning new skills, or working groups. Free yourself from distractions and
-    work with like-minded people. This is the perfect place to focus.
+    Creativity flourishes at Focus Retreat Center. With support and inspiration
+    from your retreat peers you'll do your most meaningful work. Find the relief
+    you need from your day to day and unleash creativity.
   </h3>
+
+  <h4>
+    We run retreats for coding, illustration, writing, learning new skills, and
+    working groups.
+  </h4>
 
   <h4>Located in Malone, NY just north of Adirondack Park.</h4>
 </section>
@@ -127,6 +132,14 @@
   />
 </section>
 
+<section class="grid">
+  <blockquote>
+    "I learned a lot from everybody. A little thing here, a little thing there.
+    I'll never forget any of you guys or any of this experience. It's so
+    frickin' cool. My soul thanks you." &mdash;Mike S
+  </blockquote>
+</section>
+
 <section class="hosts grid bg-dark-blue" id="hosts">
   <div>
     <img
@@ -233,14 +246,6 @@
       around us includes many lovely examples of Victorian era homes.
     </p>
   </div>
-</section>
-
-<section class="grid">
-  <blockquote>
-    "I learned a lot from everybody. A little thing here, a little thing there.
-    I'll never forget any of you guys or any of this experience. It's so
-    frickin' cool. My soul thanks you." &mdash;Mike S
-  </blockquote>
 </section>
 
 <section class="gallery">
