--- a/sass/post-list.scss
+++ b/sass/post-list.scss
@@ -7,11 +7,11 @@
 
   .date {
     color: $brand-light-blue;
-    font-size: 80%;
+    font-size: 1.0rem;
   }
 
   .title {
-    font-size: 120%;
+    font-size: 1.2rem;
     text-decoration: none;
     display: block;
     color: $brand-dark-blue;
