--- a/sass/images.scss
+++ b/sass/images.scss
@@ -2,7 +2,7 @@
 @import "core-layout";
 
 @mixin big-bold-blue {
-  font-size: 32px;
+  font-size: 1.8rem;
   text-decoration: none;
   font-weight: bolder;
   color: $brand-dark-blue;
