--- a/sass/index.scss
+++ b/sass/index.scss
@@ -33,10 +33,10 @@ section.hosts img.hosts {
 
 section.values {
   a {
-    font-size: 24px;
+    font-size: 1.4rem;
   }
   li {
-    font-size: 24px;
+    font-size: 1.4rem;
   }
 }
 
@@ -55,7 +55,7 @@ section.offer img {
 }
 
 .phone {
-  font-size: 150%;
+  font-size: 1.5rem;
 }
 
 .bg-brick {
