Switch to team@ for emails. More personal tone.

--- a/templates/index.html
+++ b/templates/index.html
@@ -101,8 +101,8 @@
   <p>
     Email us at
     <a
-      href="mailto:info@focusretreatcenter.com?subject=Winter Residency Inquiry"
-      >info@focusretreatcenter.com</a
+      href="mailto:team@focusretreatcenter.com?subject=Winter Residency Inquiry"
+      >team@focusretreatcenter.com</a
     >
     if you might be interested.
   </p>
@@ -296,7 +296,7 @@
   <a class="phone" href="tel:+15183108879">518-310-8879</a>
   <a
     class="brand-button"
-    href="mailto:info@focusretreatcenter.com?subject=Website Retreat Inquiry"
+    href="mailto:team@focusretreatcenter.com?subject=Website Retreat Inquiry"
     >Contact us for more info</a
   >
 </section>
