Room photo gallery use grid autofill with gaps

--- a/sass/images.scss
+++ b/sass/images.scss
@@ -19,9 +19,19 @@
 }
 
 section.gallery-gap {
-  padding: 1em;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(450px, 1fr));
+  figure {
+    margin: 0.4rem;
+    margin-bottom: 2rem;
+    img {
+      display: block;
+      margin: 0 auto;
+    }
+  }
+  figcaption {
+    text-align: center;
+  }
 }
 
 section.gallery-nogap {
