--- a/templates/layout.html
+++ b/templates/layout.html
@@ -119,7 +119,7 @@
         {{ page.date | date(format="%B %e, %Y", timezone="America/New_York") }}
       </div>
       <hr />
-      {% endif %}
+      {% endif -%}
       {% endif -%}
     </header>
     {% endblock -%}
