Tweak gap photo grid dimensions

--- a/sass/core-layout.scss
+++ b/sass/core-layout.scss
@@ -1,4 +1,4 @@
-$breakpoint: 42em;
+$breakpoint: 600px;
 $pad: 1em;
 
 // Primary page layout is a single column with content centered horizontally.
